[tool.poetry]
name = "cashflow-analysis"
version = "0.1.0"
description = ""
authors = ["BigBlackWolf <stepan.rasputny@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
plotly = "^6.0.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
